[gd_scene load_steps=4 format=2]

[ext_resource path="res://scripts/Root.gd" type="Script" id=1]
[ext_resource path="res://screens/ViewerScreen.tscn" type="PackedScene" id=2]
[ext_resource path="res://screens/ControllerRequester.tscn" type="PackedScene" id=3]

[node name="Root" type="Node" index="0"]

script = ExtResource( 1 )

[node name="ViewerScreen" parent="." index="0" instance=ExtResource( 2 )]

[node name="ControllerRequester" parent="." index="1" instance=ExtResource( 3 )]

[node name="UpdateTimer" type="Timer" parent="." index="2"]

process_mode = 1
wait_time = 0.5
one_shot = false
autostart = true

[connection signal="timeout" from="UpdateTimer" to="." method="_on_UpdateTimer_timeout"]


